# OOP_Project

./: CMakeLists.txt  README.md  demo.cpp  opencv.cpp  preprocess_image.cpp  walkthrough.md
src/: main.cpp
